Click listener Recipes working

--- a/myapp/app/src/main/AndroidManifest.xml
+++ b/myapp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".Ingredients"></activity>
         <activity android:name=".Recipes"></activity>
+        <activity android:name=".OpenRecipe"></activity>
 
     </application>
 
